# oneapi_matmul

./: CMakeLists.txt
oneapi_matmul/: CMakeLists.txt  matmul_perf.cpp  oneapi_matmul.cpp  oneapi_matmul.h
